<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="application_name">Sismics Reader</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="login_explain"><![CDATA[To start, you must download and install Sismics Reader Server on <a href="http://www.sismics.com/reader">www.sismics.com/reader</a> and enter your server URL below]]></string>
    <string name="server_url_hint" translatable="false">reader.sismics.com</string>
    <string name="server">Server</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login_fail_title">Login fail</string>
    <string name="login_fail">Wrong username or password</string>
    <string name="network_error_title">Network error</string>
    <string name="network_error">Network error, please check internet connectivity and server URL</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url">Please check the server URL and try again</string>
    <string name="refresh">Refresh</string>
    <string name="all_read">Mark all as read</string>
    <string name="logout">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="marked_as_unread">Marked as unread</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="latest">Latest</string>
    <string name="unread">Unread</string>
    <string name="all">All</string>
    <string name="starred">Starred</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="category">Category</string>
    <string name="favicon">Favicon</string>
    <string name="crash_toast_text">A crash occurred, a report has been sent to resolve this problem</string>
    <string name="all_read_title">Mark all as read</string>
    <string name="all_read_message">Mark all articles as read?</string>
    <string name="share">Share</string>
    <string name="share_to">Share article to&#8230;</string>
    <string name="no_articles">No articles</string>
    <string name="no_unread_articles">All read!</string>
    <string name="error_loading_articles">Error loading articles</string>
    <string name="error_loading_subscriptions">Error loading subscriptions</string>
    <string name="error_loading_categories">Error loading categories</string>
    <string name="loading_subscriptions">Loading subscriptions&#8230;</string>
    <string name="loading_articles">Loading articles&#8230;</string>
    <string name="add_subscription">Add subscription</string>
    <string name="add_subscription_hint">Paste a feed or website URL</string>
    <string name="add_subscription_error">Error adding this subscription</string>
    <string name="add_subscription_success">Subscription successfully added</string>
    <string name="add">Add</string>
    <!-- Don't translate extension_description, it is used in the manifest and must not vary. -->
    <string name="extension_description" translatable="false">Displays the number of unread articles</string>
    <string name="extension_expanded_title">%1$d unread articles</string>
    <string name="enclosure">Enclosure</string>
    <string name="touch_close">Touch to close</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="action_search">Search articles</string>
    <string name="manage_categories">Manage categories</string>
    <string name="touch_reorder">Touch to reorder</string>
    <string name="manage_categories_explain">Drag categories to reorder them. Don\'t forget to save your modifications.</string>
    <string name="save">Save</string>
    <string name="more_options">More options</string>
    <string name="rename">Rename</string>
    <string name="rename_category">Rename category</string>
    <string name="delete">Delete</string>
    <string name="category_delete_title">Delete category</string>
    <string name="category_delete_message">Do you really want to delete this category?</string>
    <string name="finish_save_title">Pending changes</string>
    <string name="finish_save_message">You have unsaved changes. Save them now?</string>
    <string name="dismiss">Dismiss</string>
    <string name="save_now">Save Now</string>
    <string name="manage_categories_save_error">Network error while saving pending changes</string>
    <string name="manage_categories_save_success">Changes saved</string>
    <string name="manage_categories_saving">%1$d changes to save&#8230;</string>
    <string name="add_category">Add a category</string>
    <string name="category_name">Category name</string>
    <string name="selected_items">%1$d selected</string>
    <string name="next">Next</string>
    <string name="close">Close</string>

    <!-- Preferences -->
    <string name="pref_general_category">General settings</string>
    <string name="pref_reporting_category">Error reporting</string>
    <string name="pref_about_category">About</string>
    <string name="pref_enable_acra">Automatic error reports</string>
    <string name="pref_acra_enabled">Reporting enabled</string>
    <string name="pref_acra_disabled">Reporting disabled</string>
    <string name="pref_subscriptions_unread">Display only unread subscriptions</string>
    <string name="pref_subscriptions_unread_enabled">Only unread subscriptions displayed</string>
    <string name="pref_subscriptions_unread_disabled">All subscriptions displayed</string>
    <string name="pref_articles_fetched">Number of articles per page</string>
    <string name="pref_default_subscription">Startup category to display</string>
    <string name="pref_font_size">Articles font size</string>
    <string name="pref_license_title">Open source licenses</string>
    <string name="pref_license_summary">Legal information about licenses</string>
    <string name="pref_website">Website</string>
    <string name="pref_github" translatable="false">GitHub</string>
    <string name="pref_issue">Report a bug</string>
    <string name="pref_clear_history_title">Clear search history</string>
    <string name="pref_clear_history_summary">Wipe the recent search suggestions</string>
    <string name="pref_clear_history_success">Search history cleared</string>
    
    <!-- Validation -->
    <string name="validate_error_email">Invalid email</string>
    <string name="validate_error_length_min">Too short (min. %d)</string>
    <string name="validate_error_length_max">Too long (max. %d)</string>
    <string name="validate_error_required">Required</string>
    <string name="validate_error_alphanumeric">Only letters and numbers</string>
    
    <!-- Open source licenses content -->
    <string name="licenses_content" translatable="false">
      <![CDATA[
        <div>
          <h2>ViewPagerIndicator</h2>
          <p><a href="http://viewpagerindicator.com/">http://viewpagerindicator.com/</a></p>
          <p>
            Copyright 2010 2012 Jake Wharton<br />
            Licensed under the Apache License, Version 2.0.
          </p>

          <h2>ACRA</h2>
          <p><a href="http://acra.ch">http://acra.ch</a></p>
          <p>
            Copyright 2010 Emmanuel Astier & Kevin Gaudin<br />
            Licensed under the Apache License, Version 2.0.
          </p>

          <h2>Android Support v4</h2>
          <p><a href="http://developer.android.com/tools/support-library/index.html">http://developer.android.com/tools/support-library/index.html</a></p>
          <p>
            Copyright 2005-2008, The Android Open Source Project<br />
            Licensed under the Apache License, Version 2.0.
          </p>
          
          <h2>android-async-http</h2>
          <p><a href="http://loopj.com/android-async-http">http://loopj.com/android-async-http</a></p>
          <p>
            Copyright 2012 James Smith<br />
            Licensed under the Apache License, Version 2.0.
          </p>
          
          <h2>AQuery</h2>
          <p><a href="http://code.google.com/p/android-query">http://code.google.com/p/android-query/</a></p>
          <p>
            Copyright 2012 Peter Liu<br />
            Licensed under the Apache License, Version 2.0.
          </p>

          <h2>Blur ActionBarDrawerToggle</h2>
          <p><a href="https://github.com/charbgr/BlurNavigationDrawer">https://github.com/charbgr/BlurNavigationDrawer</a></p>
          <p>
            Copyright 2014 Charalampakis Basilis<br />
            Licensed under the Apache License, Version 2.0.
          </p>

          <h2>ParallaxScroll</h2>
          <p><a href="https://github.com/nirhart/ParallaxScroll">https://github.com/nirhart/ParallaxScroll</a></p>
          <p>
            Copyright 2014 Nir Hartmann<br />
            Licensed under the MIT License.
          </p>

          <h2>ShowcaseView</h2>
          <p><a href="https://github.com/amlcurran/Showcaseview">https://github.com/amlcurran/Showcaseview</a></p>
          <p>
            Copyright 2012 Alex Curran<br />
            Licensed under the Apache License, Version 2.0.
          </p>

          <h2>drag-sort-listview</h2>
          <p><a href="https://github.com/bauerca/drag-sort-listview">https://github.com/bauerca/drag-sort-listview</a></p>
          <p>
            Copyright 2012 Carl Bauer<br />
            Licensed under the Apache License, Version 2.0.
          </p>

          <h2>SystemBarTint</h2>
          <p><a href="https://github.com/jgilfelt/SystemBarTint">https://github.com/jgilfelt/SystemBarTint</a></p>
          <p>
            Copyright 2013 readyState Software Limited<br />
            Licensed under the Apache License, Version 2.0.
          </p>
        </div>
      ]]>
    </string>
    <string name="showcase_swipe_title">Refresh articles</string>
    <string name="showcase_swipe_text">Swipe down the list to refresh articles</string>
    <string name="showcase_drawer_title">Subscriptions</string>
    <string name="showcase_drawer_text">Touch here to open your subscriptions</string>

</resources>